--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "i18n-iso-countries": "^7.14.0",
+    "libphonenumber-js": "^1.12.28",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
