--- a/backend-services/auth-service/Dockerfile
+++ b/backend-services/auth-service/Dockerfile
@@ -1,5 +1,25 @@
-FROM eclipse-temurin:17-jre-alpine
+# =============================================
+# Build Stage
+# =============================================
+FROM maven:3.9.6-eclipse-temurin-17 AS build
+
 WORKDIR /app
-COPY target/auth-service-1.0.0.jar app.jar
+
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# =============================================
+# Runtime Stage
+# =============================================
+FROM eclipse-temurin:17-jdk
+
+WORKDIR /app
+
+COPY --from=build /app/target/*.jar app.jar
+
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
