--- a/backend-services/auth-service/Dockerfile
+++ b/backend-services/auth-service/Dockerfile
@@ -3,22 +3,27 @@
 # =============================================
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 
-WORKDIR /app
+WORKDIR /build
 
+# Copy parent pom
+COPY pom.xml ../pom.xml
+
+# Copy service pom and download dependencies
 COPY pom.xml .
-RUN mvn dependency:go-offline
+RUN mvn dependency:go-offline -B
 
+# Copy source code and build
 COPY src ./src
-RUN mvn clean package -DskipTests
+RUN mvn clean package -DskipTests -B
 
 # =============================================
 # Runtime Stage
 # =============================================
-FROM eclipse-temurin:17-jdk
+FROM eclipse-temurin:17-jre
 
 WORKDIR /app
 
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build /build/target/*.jar app.jar
 
 EXPOSE 8081
 
