Implemented client dashboard with org dashboard

--- a/backend-services/auth-service/src/main/resources/application.properties
+++ b/backend-services/auth-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Active Profile - Set this to switch between environments
-spring.profiles.active=local
+spring.profiles.active=prod
 
 # Application Name
 spring.application.name=bidsphare-auth-service
