Implement porject service with the frontend

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,9 @@
-VITE_API_BASE_URL=http://localhost:8080
+# API Configuration
+# For local development with Docker: use nginx gateway
+VITE_API_URL=http://localhost:8080
+
+# For direct service access (without nginx):
+# VITE_API_URL=http://localhost:8081
+
+# SignalR Configuration
 VITE_SIGNALR_URL=http://localhost:8080/hub/auction
