--- a/backend-services/auth-service/src/main/resources/application-docker.properties
+++ b/backend-services/auth-service/src/main/resources/application-docker.properties
@@ -24,11 +24,11 @@ jwt.expiration=${JWT_EXPIRATION}
 jwt.issuer=${JWT_ISSUER}
 
 # CORS Configuration
-frontend.url=${FRONTEND_URL}
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:*}
 
 # Server Configuration
 server.port=${SERVER_PORT:8081}
-server.servlet.context-path=${SERVER_SERVLET_CONTEXT_PATH:/}
+# No context path in Docker - nginx handles routing
 
 # Logging Configuration
 logging.level.com.biddingsystem.authservice=INFO
