--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -23,7 +23,32 @@ services:
     # Restart policy for development
     restart: unless-stopped
 
-  postgres:
+  project-service:
+    # Enable development features
+    environment:
+      # Enable debug logging
+      LOGGING_LEVEL_COM_BIDSPHERE_PROJECT: DEBUG
+      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB: DEBUG
+      
+    # Mount source code for hot reload (if using spring-boot-devtools)
+    volumes:
+      - ./backend-services/project-service/src:/app/src:ro
+    
+    # Restart policy for development
+    restart: unless-stopped
+
+  postgres-auth:
+    # Enable query logging for development
+    command: >
+      postgres
+      -c log_statement=all
+      -c log_destination=stderr
+      -c log_min_duration_statement=0
+    
+    # Restart policy for development
+    restart: unless-stopped
+
+  postgres-project:
     # Enable query logging for development
     command: >
       postgres
