--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   # ================================
-  # PostgreSQL Database
+  # PostgreSQL Database - Auth Service
   # ================================
-  postgres:
+  postgres-auth:
     image: postgres:15-alpine
-    container_name: bidsphere-postgres
+    container_name: bidsphere-postgres-auth
     environment:
       POSTGRES_DB: auth_db
       POSTGRES_USER: postgres
@@ -12,10 +12,33 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_auth_data:/var/lib/postgresql/data
       - ./shared/database/auth_db:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d auth_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - bidsphere-network
+
+  # ================================
+  # PostgreSQL Database - Project Service
+  # ================================
+  postgres-project:
+    image: postgres:15-alpine
+    container_name: bidsphere-postgres-project
+    environment:
+      POSTGRES_DB: project_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres123
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_project_data:/var/lib/postgresql/data
+      - ./shared/database/project_db:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d project_db"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -37,8 +60,8 @@ services:
       SPRING_APPLICATION_NAME: bidsphere-auth-service
       SPRING_PROFILES_ACTIVE: docker
       
-      # Database Configuration (localhost for local development)
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/auth_db
+      # Database Configuration
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-auth:5432/auth_db
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres123
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
@@ -49,16 +72,55 @@ services:
       JWT_ISSUER: bidsphere-auth
       
       # CORS Configuration
-      FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3000}
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:3000,http://localhost:5173}
       
       # Server Configuration
       SERVER_PORT: 8081
-      SERVER_SERVLET_CONTEXT_PATH: /
     depends_on:
-      postgres:
+      postgres-auth:
         condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8081/api/auth/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - bidsphere-network
+
+  # ================================
+  # Project API Service
+  # ================================
+  project-service:
+    build: 
+      context: ./backend-services/project-service
+      dockerfile: Dockerfile
+    container_name: bidsphere-project-api
+    ports:
+      - "8082:8082"
+    environment:
+      # Spring Configuration
+      SPRING_APPLICATION_NAME: project-service
+      
+      # Database Configuration
+      DB_HOST: postgres-project
+      DB_PORT: 5432
+      DB_NAME: project_db
+      DB_USERNAME: postgres
+      DB_PASSWORD: postgres123
+      
+      # JWT Configuration (must match auth-service)
+      JWT_SECRET: ${JWT_SECRET:-404E635266556A586E3272357538782F413F4428472B4B6250645367566B5970}
+      JWT_EXPIRATION: 86400000
+      JWT_ISSUER: bidsphere-auth
+      
+      # Server Configuration
+      SERVER_PORT: 8082
+    depends_on:
+      postgres-project:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8082/api/projects/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -99,5 +161,7 @@ networks:
 # Volumes
 # ================================
 volumes:
-  postgres_data:
+  postgres_auth_data:
+    driver: local
+  postgres_project_data:
     driver: local
