--- a/backend-services/auction-service/src/main/resources/application.properties
+++ b/backend-services/auction-service/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-# Active Profile: local, prod
+# Active Profile: local, prod, docker
 spring.profiles.active=local
 
 # Application Name
 spring.application.name=auction-service
 
 # Server Port
-server.port=8084
-#server.servlet.context-path=/api/auctions
+server.port=8085
 
 # Jackson Configuration
 spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss
