--- a/backend-services/auction-service/pom.xml
+++ b/backend-services/auction-service/pom.xml
@@ -97,6 +97,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>com.bidsphere.auctionservice.AuctionServiceApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
