--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,29 @@ services:
       - bidsphere-network
 
   # ================================
+  # PostgreSQL Database - Auction Service
+  # ================================
+  postgres-auction:
+    image: postgres:15-alpine
+    container_name: bidsphere-postgres-auction
+    environment:
+      POSTGRES_DB: auction_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres123
+    ports:
+      - "5435:5432"
+    volumes:
+      - postgres_auction_data:/var/lib/postgresql/data
+      - ./shared/database/auction_db:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d auction_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - bidsphere-network
+
+  # ================================
   # Auth API Service
   # ================================
   auth-service:
@@ -200,6 +223,78 @@ services:
       - bidsphere-network
 
   # ================================
+  # Auction API Service
+  # ================================
+  auction-service:
+    build: 
+      context: ./backend-services/auction-service
+      dockerfile: Dockerfile
+    container_name: bidsphere-auction-api
+    ports:
+      - "8085:8085"
+    environment:
+      # Spring Configuration
+      SPRING_APPLICATION_NAME: auction-service
+      SPRING_PROFILES_ACTIVE: docker
+      
+      # Database Configuration
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-auction:5432/auction_db
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres123
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+      
+      # JPA Configuration
+      SPRING_JPA_HIBERNATE_DDL_AUTO: validate
+      
+      # Flyway Configuration
+      SPRING_FLYWAY_ENABLED: false
+      
+      # JWT Configuration (must match auth-service)
+      JWT_SECRET: ${JWT_SECRET:-404E635266556A586E3272357538782F413F4428472B4B6250645367566B5970}
+      JWT_EXPIRATION: 86400000
+      JWT_ISSUER: bidsphere-auth
+      
+      # Auth Service URL
+      SERVICES_AUTH_SERVICE_URL: http://auth-service:8081
+      
+      # CORS Configuration
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:3000,http://localhost:5173}
+      
+      # Server Configuration
+      SERVER_PORT: 8085
+    depends_on:
+      postgres-auction:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8085/api/auctions/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - bidsphere-network
+
+  # ================================
+  # Nginx API Gateway
+  # ================================
+  nginx:
+    image: nginx:alpine
+    container_name: bidsphere-api-gateway
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./infrastructure/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - auth-service
+      - project-service
+      - bidding-service
+      - auction-service
+      - realtime-service
+    networks:
+      - bidsphere-network
+    restart: unless-stopped
+
+  # ================================
   # Redis Cache
   # ================================
   redis:
@@ -240,7 +335,7 @@ services:
       
       # Redis Configuration
       Redis__ConnectionString: redis:6379
-      Redis__InstanceName: BidSphere:
+      Redis__InstanceName: "BidSphere:"
       
       # CORS Configuration
       Cors__AllowedOrigins__0: ${CORS_ALLOWED_ORIGINS:-http://localhost:3000}
@@ -295,6 +390,8 @@ volumes:
   postgres_project_data:
     driver: local
   postgres_bidding_data:
+    driver: local
+  postgres_auction_data:
     driver: local
   redis_data:
     driver: local
