--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -3,56 +3,121 @@ events {
 }
 
 http {
+    # Basic HTTP settings
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
+    sendfile on;
+    keepalive_timeout 65;
+    
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+    
+    # Upstream definitions for backend services
     upstream auth_service {
         server auth-service:8081;
     }
-
-    upstream project_auction_service {
-        server project-auction-service:8082;
+    
+    upstream project_service {
+        server project-service:8082;
     }
-
+    
     upstream bidding_service {
         server bidding-service:8083;
     }
-
+    
     upstream realtime_service {
-        server realtime-service:5000;
+        server realtime-service:8084;
     }
-
+    
+    upstream auction_service {
+        server auction-service:8085;
+    }
+    
+    # Server block
     server {
         listen 8080;
-
+        server_name _;
+        
+        # Timeout and buffer settings
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        client_max_body_size 10M;
+        
+        # Security headers
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "DENY" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        server_tokens off;
+        
+        # Location block for auth service
         location /api/auth/ {
             proxy_pass http://auth_service/api/auth/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header X-Requested-With $http_x_requested_with;
         }
-
+        
+        # Location block for project service
         location /api/projects/ {
-            proxy_pass http://project_auction_service/api/projects/;
+            proxy_pass http://project_service/api/projects/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header X-Requested-With $http_x_requested_with;
         }
-
+        
+        # Location block for bidding service
+        location /api/bids {
+            proxy_pass http://bidding_service/api/bids;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header X-Requested-With $http_x_requested_with;
+        }
+        
+        # Location block for auction service
         location /api/auctions/ {
-            proxy_pass http://project_auction_service/api/auctions/;
+            proxy_pass http://auction_service/api/auctions/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header X-Requested-With $http_x_requested_with;
         }
-
-        location /api/bids/ {
-            proxy_pass http://bidding_service/api/bids/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-
+        
+        # Location block for realtime service (WebSocket)
         location /hub/ {
             proxy_pass http://realtime_service/hub/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header X-Requested-With $http_x_requested_with;
+        }
+        
+        # Health check endpoint
+        location /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
         }
     }
 }
