fix: Update auction service integration and fix API gateway routing
- Fixed Dockerfile to use port 8080 (API gateway) instead of 8081
- Added auction_id field to Project entity with database migration
- Implemented automatic auction creation when LIVE_AUCTION projects are created
- Added getMyAuctions() endpoint in auction-service with optional X-User-Id header
- Updated ClientAuctions and OrganizationAuctions to fetch from auction-service
- Updated nginx gateway to forward X-User-Id, X-User-Name, X-Organization-Id headers
- Made /api/auctions/my-auctions endpoint public in SecurityConfig
- Fixed auction status mapping (ACTIVE/LIVE, CLOSED/ENDED)
- Cleaned up old LIVE_AUCTION projects from database

--- a/backend-services/auction-service/src/main/resources/application-docker.properties
+++ b/backend-services/auction-service/src/main/resources/application-docker.properties
@@ -48,3 +48,6 @@ spring.jackson.time-zone=UTC
 
 # Scheduler Configuration
 app.auction.scheduler.cron=0 * * * * *
+
+# Realtime Service URL
+services.realtime-service.url=${SERVICES_REALTIME_SERVICE_URL:http://realtime-service:8084}
