--- a/backend-services/auction-service/src/main/resources/application-local.properties
+++ b/backend-services/auction-service/src/main/resources/application-local.properties
@@ -18,3 +18,6 @@ cors.allowed.origins=http://localhost:3000
 # Logging for Development
 logging.level.com.bidsphere.auctionservice=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
+
+# Realtime Service URL - Local
+services.realtime-service.url=http://localhost:8084
