--- a/backend-services/realtime-service/appsettings.Production.json
+++ b/backend-services/realtime-service/appsettings.Production.json
@@ -15,6 +15,11 @@
         "ConnectionString": "redis:6379",
         "InstanceName": "BidSphere:"
     },
+    "Services": {
+        "AuctionService": {
+            "Url": "http://auction-service:8085"
+        }
+    },
     "Cors": {
         "AllowedOrigins": [
             "http://localhost:3000",
