--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -257,6 +257,9 @@ services:
       # Auth Service URL
       SERVICES_AUTH_SERVICE_URL: http://auth-service:8081
       
+      # Realtime Service URL
+      SERVICES_REALTIME_SERVICE_URL: http://realtime-service:8084
+      
       # CORS Configuration
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:3000,http://localhost:5173}
       
