feat: Complete client auction flow with winner details sync
- Added winner details sync from auction to project database
- Added winner_organization_name field to projects table
- Updated auction service to send winner info to project service
- Whitelisted auction-completed endpoint for service-to-service calls
- Frontend: Display winner details in project modal (amount, org name, contact button)
- Frontend: Show winner card in View Bids panel with contact functionality
- Frontend: Fixed status badge formatting (In Progress instead of IN_PROGRESS)
- Frontend: Proper currency formatting for winning amounts
- Database migrations: 06, 07, 08 for winner fields in project_db

--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -175,7 +175,7 @@ http {
                 add_header 'Access-Control-Allow-Origin' '$http_origin' always;
                 add_header 'Access-Control-Allow-Credentials' 'true' always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With, X-User-Id, X-User-Name, X-Organization-Id' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With, X-User-Id, X-User-Name, X-Organization-Id, X-Organization-Name' always;
                 add_header 'Access-Control-Max-Age' '3600' always;
                 add_header 'Content-Length' '0' always;
                 add_header 'Content-Type' 'text/plain' always;
@@ -193,6 +193,7 @@ http {
             proxy_set_header X-User-Id $http_x_user_id;
             proxy_set_header X-User-Name $http_x_user_name;
             proxy_set_header X-Organization-Id $http_x_organization_id;
+            proxy_set_header X-Organization-Name $http_x_organization_name;
             
             # Pass through CORS headers from backend
             proxy_hide_header Access-Control-Allow-Origin;
@@ -247,9 +248,59 @@ http {
             add_header Access-Control-Max-Age $upstream_http_access_control_max_age always;
         }
         
+        # Location block for realtime service REST API
+        location /api/realtime {
+            # Handle OPTIONS preflight requests directly
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+                add_header 'Access-Control-Max-Age' '3600' always;
+                add_header 'Content-Length' '0' always;
+                add_header 'Content-Type' 'text/plain' always;
+                return 204;
+            }
+            
+            proxy_pass http://realtime_service/api/realtime;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header X-Requested-With $http_x_requested_with;
+            proxy_set_header Origin $http_origin;
+            
+            # Pass through CORS headers from backend
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Credentials;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+            proxy_hide_header Access-Control-Expose-Headers;
+            proxy_hide_header Access-Control-Max-Age;
+            add_header Access-Control-Allow-Origin $upstream_http_access_control_allow_origin always;
+            add_header Access-Control-Allow-Credentials $upstream_http_access_control_allow_credentials always;
+            add_header Access-Control-Allow-Methods $upstream_http_access_control_allow_methods always;
+            add_header Access-Control-Allow-Headers $upstream_http_access_control_allow_headers always;
+            add_header Access-Control-Expose-Headers $upstream_http_access_control_expose_headers always;
+            add_header Access-Control-Max-Age $upstream_http_access_control_max_age always;
+        }
+        
         # Location block for realtime service (WebSocket)
-        location /hub/ {
-            proxy_pass http://realtime_service/hub/;
+        location /hubs/ {
+            # Handle OPTIONS preflight requests directly
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With, X-SignalR-User-Agent' always;
+                add_header 'Access-Control-Max-Age' '3600' always;
+                add_header 'Content-Length' '0' always;
+                add_header 'Content-Type' 'text/plain' always;
+                return 204;
+            }
+            
+            proxy_pass http://realtime_service/hubs/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -260,14 +311,25 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Authorization $http_authorization;
             proxy_set_header X-Requested-With $http_x_requested_with;
+            proxy_set_header Origin $http_origin;
             
             # WebSocket specific timeouts
             proxy_read_timeout 86400s;
             proxy_send_timeout 86400s;
             
-            # CORS headers for WebSocket handshake
-            add_header 'Access-Control-Allow-Origin' '$http_origin' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            # Pass through CORS headers from backend
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Credentials;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+            proxy_hide_header Access-Control-Expose-Headers;
+            proxy_hide_header Access-Control-Max-Age;
+            add_header Access-Control-Allow-Origin $upstream_http_access_control_allow_origin always;
+            add_header Access-Control-Allow-Credentials $upstream_http_access_control_allow_credentials always;
+            add_header Access-Control-Allow-Methods $upstream_http_access_control_allow_methods always;
+            add_header Access-Control-Allow-Headers $upstream_http_access_control_allow_headers always;
+            add_header Access-Control-Expose-Headers $upstream_http_access_control_expose_headers always;
+            add_header Access-Control-Max-Age $upstream_http_access_control_max_age always;
         }
         
         # Health check endpoint
