--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -260,6 +260,9 @@ services:
       # Realtime Service URL
       SERVICES_REALTIME_SERVICE_URL: http://realtime-service:8084
       
+      # Project Service URL
+      SERVICES_PROJECT_SERVICE_URL: http://project-service:8082
+      
       # CORS Configuration
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:3000,http://localhost:5173}
       
@@ -333,7 +336,7 @@ services:
       
       # JWT Configuration (must match auth-service)
       Jwt__Secret: ${JWT_SECRET:-404E635266556A586E3272357538782F413F4428472B4B6250645367566B5970}
-      Jwt__Issuer: bidsphere-auth
+      Jwt__Issuer: ${JWT_ISSUER:-bidsphere-auth}
       Jwt__Expiration: 86400000
       
       # Redis Configuration
