--- a/backend-services/auth-service/src/main/resources/application-prod.properties
+++ b/backend-services/auth-service/src/main/resources/application-prod.properties
@@ -12,6 +12,9 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 jwt.issuer=bidding-system-auth
 
+# CORS Configuration - Allow production frontend
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:https://spherebid.vercel.app}
+
 # CORS for Production Frontend
 frontend.url=https://spherebid.vercel.app
 
