--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -92,6 +92,44 @@ http {
             add_header Access-Control-Max-Age $upstream_http_access_control_max_age always;
         }
         
+        # Location block for user profile endpoints (auth service)
+        location /api/users {
+            # Handle OPTIONS preflight requests directly
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With, X-User-Id, X-Organization-Id, X-Organization-Name' always;
+                add_header 'Access-Control-Max-Age' '3600' always;
+                add_header 'Content-Length' '0' always;
+                add_header 'Content-Type' 'text/plain' always;
+                return 204;
+            }
+            
+            proxy_pass http://auth_service/api/users;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            proxy_set_header X-Requested-With $http_x_requested_with;
+            proxy_set_header Origin $http_origin;
+            
+            # Pass through CORS headers from backend
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Credentials;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+            proxy_hide_header Access-Control-Expose-Headers;
+            proxy_hide_header Access-Control-Max-Age;
+            add_header Access-Control-Allow-Origin $upstream_http_access_control_allow_origin always;
+            add_header Access-Control-Allow-Credentials $upstream_http_access_control_allow_credentials always;
+            add_header Access-Control-Allow-Methods $upstream_http_access_control_allow_methods always;
+            add_header Access-Control-Allow-Headers $upstream_http_access_control_allow_headers always;
+            add_header Access-Control-Expose-Headers $upstream_http_access_control_expose_headers always;
+            add_header Access-Control-Max-Age $upstream_http_access_control_max_age always;
+        }
+        
         # Location block for project service (without trailing slash)
         location /api/projects {
             # Handle OPTIONS preflight requests directly
