--- a/backend-services/auth-service/pom.xml
+++ b/backend-services/auth-service/pom.xml
@@ -75,6 +75,12 @@
 				<scope>runtime</scope>
 			</dependency>
 
+			<!-- Email -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-mail</artifactId>
+			</dependency>
+
 			<!-- Utilities -->
 			<dependency>
 				<groupId>org.projectlombok</groupId>
