--- a/backend-services/auth-service/src/main/resources/application-docker.properties
+++ b/backend-services/auth-service/src/main/resources/application-docker.properties
@@ -26,6 +26,22 @@ jwt.issuer=${JWT_ISSUER}
 # CORS Configuration
 cors.allowed.origins=${CORS_ALLOWED_ORIGINS:*}
 
+# Email Configuration
+spring.mail.host=${SMTP_HOST:smtp.gmail.com}
+spring.mail.port=${SMTP_PORT:587}
+spring.mail.username=${SMTP_USERNAME:}
+spring.mail.password=${SMTP_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=${SMTP_AUTH:true}
+spring.mail.properties.mail.smtp.starttls.enable=${SMTP_STARTTLS_ENABLE:true}
+spring.mail.properties.mail.smtp.starttls.required=${SMTP_STARTTLS_REQUIRED:true}
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# Email Verification Settings
+email.verification.enabled=${EMAIL_VERIFICATION_ENABLED:true}
+email.verification.url=${EMAIL_VERIFICATION_URL:http://localhost:3000/verify-email}
+
 # Server Configuration
 server.port=${SERVER_PORT:8081}
 # No context path in Docker - nginx handles routing
