--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -309,19 +309,11 @@ http {
             proxy_set_header X-Requested-With $http_x_requested_with;
             proxy_set_header Origin $http_origin;
             
-            # Pass through CORS headers from backend
-            proxy_hide_header Access-Control-Allow-Origin;
-            proxy_hide_header Access-Control-Allow-Credentials;
-            proxy_hide_header Access-Control-Allow-Methods;
-            proxy_hide_header Access-Control-Allow-Headers;
-            proxy_hide_header Access-Control-Expose-Headers;
-            proxy_hide_header Access-Control-Max-Age;
-            add_header Access-Control-Allow-Origin $upstream_http_access_control_allow_origin always;
-            add_header Access-Control-Allow-Credentials $upstream_http_access_control_allow_credentials always;
-            add_header Access-Control-Allow-Methods $upstream_http_access_control_allow_methods always;
-            add_header Access-Control-Allow-Headers $upstream_http_access_control_allow_headers always;
-            add_header Access-Control-Expose-Headers $upstream_http_access_control_expose_headers always;
-            add_header Access-Control-Max-Age $upstream_http_access_control_max_age always;
+            # Add CORS headers directly
+            add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
         }
         
         # Location block for realtime service (WebSocket)
@@ -355,19 +347,11 @@ http {
             proxy_read_timeout 86400s;
             proxy_send_timeout 86400s;
             
-            # Pass through CORS headers from backend
-            proxy_hide_header Access-Control-Allow-Origin;
-            proxy_hide_header Access-Control-Allow-Credentials;
-            proxy_hide_header Access-Control-Allow-Methods;
-            proxy_hide_header Access-Control-Allow-Headers;
-            proxy_hide_header Access-Control-Expose-Headers;
-            proxy_hide_header Access-Control-Max-Age;
-            add_header Access-Control-Allow-Origin $upstream_http_access_control_allow_origin always;
-            add_header Access-Control-Allow-Credentials $upstream_http_access_control_allow_credentials always;
-            add_header Access-Control-Allow-Methods $upstream_http_access_control_allow_methods always;
-            add_header Access-Control-Allow-Headers $upstream_http_access_control_allow_headers always;
-            add_header Access-Control-Expose-Headers $upstream_http_access_control_expose_headers always;
-            add_header Access-Control-Max-Age $upstream_http_access_control_max_age always;
+            # Add CORS headers directly for SignalR
+            add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With, X-SignalR-User-Agent' always;
         }
         
         # Health check endpoint
